Serial: max_eden_size is too small after JDK-8368740

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 26
    • Affects Version/s: 26
    • Component/s: hotspot
    • None
    • gc
    • b27

      JDK-8368740 changed the Serial heap sizing code so that eden might theoretically grow to be as large as the entire young generation. This does not align with the value that is exposed through the memory pools to Java code, where max_eden_size is too small.

      This is easily provoked by setting a very small heap size. Failing test:
      makec ../build/jdk26 test TEST=open/test/jdk/java/lang/management/MemoryPoolMXBean/ThresholdTest.java TEST_OPTS_JAVA_OPTIONS="-XX:+UseSerialGC -Xms8M"

            Assignee:
            Joel Sikström
            Reporter:
            Joel Sikström
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: