8372993: Serial: max_eden_size is too small after JDK-8368740